Added some new stuff